--- a/index.html
+++ b/index.html
@@ -14,6 +14,35 @@
       margin: 0;
       padding: 0 10px 40px;
     }
+    #login-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background: #f0f0f0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    #login-screen input {
+      padding: 10px;
+      margin: 5px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      width: 200px;
+    }
+    #login-screen button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      background-color: #217346;
+      color: white;
+      cursor: pointer;
+      margin-top: 10px;
+    }
     h1 {
       text-align: center;
       position: sticky;
@@ -69,8 +98,8 @@
       white-space: nowrap;
     }
     thead th {
-      background-color: #4b0082;
-      color: white;
+      background-color: #1d6f42;
+      color: black;
     }
     .dataTables_wrapper {
       overflow-x: auto;
@@ -99,6 +128,14 @@
   </style>
 </head>
 <body>
+<div id="login-screen">
+  <h2>Login EPHunter</h2>
+  <input type="text" id="username" placeholder="Username" />
+  <input type="password" id="password" placeholder="Password" />
+  <button onclick="login()">Login</button>
+</div>
+
+<div id="main-content" style="display:none">
 <h1>EPTalent Database</h1>
 
 <div id="controls">
@@ -124,6 +161,11 @@
   </table>
 </div>
 
+<footer style="text-align:center; font-size:10px; color:#888; margin-top:20px;">
+  Hak Cipta &copy; EPHunter 2025
+</footer>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/fixedheader/3.3.2/js/dataTables.fixedHeader.min.js"></script>
@@ -132,19 +174,36 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 <script>
-  const CSV_URL = "https://docs.google.com/spreadsheets/d/1uyi8ChwHspcS7CNY_pmUqsxw0Emp9wy5gPFnEZYFnYc/gviz/tq?tqx=out:csv&gid=0https://docs.google.com/spreadsheets/d/1uyi8ChwHspcS7CNY_pmUqsxw0Emp9wy5gPFnEZYFnYc/gviz/tq?tqx=out:csv&gid=0";
+  const CSV_URL = "https://docs.google.com/spreadsheets/d/1uyi8ChwHspcS7CNY_pmUqsxw0Emp9wy5gPFnEZYFnYc/gviz/tq?tqx=out:csv&gid=0";
 
-  async function init() {
-    try {
-      const response = await fetch(CSV_URL);
-      if (!response.ok) throw new Error('Network response was not ok');
-      const csvText = await response.text();
-      const parsed = Papa.parse(csvText, { header: true, skipEmptyLines: true });
-      showInfo(parsed.data);
-    } catch (error) {
-      console.error("Error fetching data:", error);
-      alert("Gagal memuat data. Pastikan spreadsheet bersifat publik dan URL benar.");
+  const users = {
+    ephunter: "ephunter",
+    marsha: "marsha2025"
+  };
+
+  function login() {
+    const u = document.getElementById("username").value;
+    const p = document.getElementById("password").value;
+    if (users[u] && users[u] === p) {
+      document.getElementById("login-screen").style.display = "none";
+      document.getElementById("main-content").style.display = "block";
+      init();
+    } else {
+      alert("Username atau password salah.");
     }
+  }
+
+  function init() {
+    fetch(CSV_URL)
+      .then(response => response.text())
+      .then(csv => {
+        const parsed = Papa.parse(csv, { header: true, skipEmptyLines: true });
+        showInfo(parsed.data);
+      })
+      .catch(error => {
+        console.error("Error fetching data:", error);
+        alert("Gagal memuat data. Pastikan spreadsheet bersifat publik dan URL benar.");
+      });
   }
 
   function showInfo(data) {
@@ -202,8 +261,6 @@
       table.column(columns.findIndex(c => c.title === colName)).search(this.value).draw();
     });
   }
-
-  window.addEventListener('DOMContentLoaded', init);
 </script>
 </body>
 </html>
