--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
       white-space: nowrap;
     }
     thead th {
-      background-color: #1d6f42;
-      color: black;
+      background-color: #217346;
+      color: white;
     }
     .dataTables_wrapper {
       overflow-x: auto;
@@ -179,140 +179,158 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
 <script>
-  const CSV_URL = "https://docs.google.com/spreadsheets/d/1uyi8ChwHspcS7CNY_pmUqsxw0Emp9wy5gPFnEZYFnYc/gviz/tq?tqx=out:csv&gid=0";
+const CSV_URL = "https://docs.google.com/spreadsheets/d/1uyi8ChwHspcS7CNY_pmUqsxw0Emp9wy5gPFnEZYFnYc/gviz/tq?tqx=out:csv&gid=0";
+const users = { ephunter: "ephunter", marsha: "marsha2025" };
+const actionStatus = JSON.parse(localStorage.getItem('actionStatus') || '{}');
 
-  const users = {
-    ephunter: "ephunter",
-    marsha: "marsha2025"
-  };
-
-  function login() {
-    const u = document.getElementById("username").value;
-    const p = document.getElementById("password").value;
-    if (users[u] && users[u] === p) {
-      localStorage.setItem("loggedIn", "true");
-      document.getElementById("login-screen").style.display = "none";
-      document.getElementById("main-content").style.display = "block";
-      init();
-    } else {
-      alert("Username atau password salah.");
-    }
+function login() {
+  const u = document.getElementById("username").value;
+  const p = document.getElementById("password").value;
+  if (users[u] && users[u] === p) {
+    localStorage.setItem("loggedIn", "true");
+    document.getElementById("login-screen").style.display = "none";
+    document.getElementById("main-content").style.display = "block";
+    init();
+  } else {
+    alert("Username atau password salah.");
   }
+}
 
-  function init() {
-    fetch(CSV_URL)
-      .then(response => response.text())
-      .then(csv => {
-        const parsed = Papa.parse(csv, { header: true, skipEmptyLines: true });
-        showInfo(parsed.data);
-      })
-      .catch(error => {
-        console.error("Error fetching data:", error);
-        alert("Gagal memuat data. Pastikan spreadsheet bersifat publik dan URL benar.");
-      });
-  }
+function init() {
+  fetch(CSV_URL)
+    .then(res => res.text())
+    .then(csv => {
+      const parsed = Papa.parse(csv, { header: true, skipEmptyLines: true });
+      showInfo(parsed.data);
+    })
+    .catch(err => {
+      alert("Gagal memuat data: " + err);
+    });
+}
 
-  function showInfo(data) {
-    const columns = [{
+function showInfo(data) {
+  const columns = [
+    {
       title: '<input type="checkbox" id="select-all" />',
       data: null,
       orderable: false,
       render: (data, type, row, meta) => `<input type='checkbox' class='row-select' data-index='${meta.row}' />`
-    }];
+    }
+  ];
 
-    Object.keys(data[0]).forEach(key => {
-      if (key === 'Alamat Saat ini') {
-        columns.push({
-          title: key,
-          data: key,
-          render: (data) => `<span class="truncate" title="${data}">${data}</span>`
-        });
-      } else {
-        columns.push({ title: key, data: key });
-      }
-    });
+  data.forEach((row, i) => {
+    if (actionStatus[i]) row.__savedAction = actionStatus[i];
+    if (row['Upload CV']) {
+      row['Upload CV'] = `<a href="${row['Upload CV']}" target="_blank">Download CV</a>`;
+    }
+  });
 
-    data.forEach(row => {
-      if (row['Upload CV']) {
-        row['Upload CV'] = `<a href="${row['Upload CV']}" target="_blank">Download CV</a>`;
-      }
-    });
-
-    const table = $('#sheet-data').DataTable({
-      fixedHeader: {
-        header: true,
-        headerOffset: 60
-      },
-      fixedColumns: {
-        leftColumns: 1
-      },
-      data,
-      columns,
-      columnDefs: [{ targets: 0, className: 'dt-center' }],
-      scrollY: 'calc(100vh - 250px)',
-      scrollX: true,
-      scrollCollapse: true,
-      paging: true,
-      pageLength: 10,
-      dom: 'Blfrtip',
-      buttons: []
-    });
-
-    document.getElementById('download-btn').addEventListener('click', () => {
-      const selectedIndexes = [];
-      document.querySelectorAll('.row-select:checked').forEach(cb => {
-        selectedIndexes.push(parseInt(cb.dataset.index));
+  Object.keys(data[0]).forEach(key => {
+    if (key === 'Alamat Saat ini') {
+      columns.push({
+        title: key,
+        data: key,
+        render: (data) => `<span class="truncate" title="${data}">${data}</span>`
       });
+    } else if (key === 'Upload CV') {
+      columns.push({ title: key, data: key });
+      columns.push({
+        title: 'Action',
+        data: null,
+        orderable: false,
+        render: (data, type, row, meta) => {
+          const selected = row.__savedAction || "";
+          return `
+            <select class='action-dropdown' style='width:110px; font-size:9px;'>
+              <option value="" ${selected === "" ? "selected" : ""}>- Pilih -</option>
+              <option value="screening" ${selected === "screening" ? "selected" : ""}>🟡 Screening</option>
+              <option value="interview" ${selected === "interview" ? "selected" : ""}>🟠 Interview</option>
+              <option value="submit" ${selected === "submit" ? "selected" : ""}>🟢 Submit Klien</option>
+              <option value="interview_client" ${selected === "interview_client" ? "selected" : ""}>🔵 Interview Client</option>
+              <option value="offering" ${selected === "offering" ? "selected" : ""}>🟦 Offering Letter</option>
+              <option value="join" ${selected === "join" ? "selected" : ""}>🟩 Join</option>
+              <option value="cancel" ${selected === "cancel" ? "selected" : ""}>🔴 Cancel Client</option>
+            </select>
+          `;
+        }
+      });
+    } else if (key === '__savedAction') {
+      columns.push({
+        title: 'Riwayat Proses',
+        data: key,
+        render: data => data || '',
+        createdCell: (td) => td.style.backgroundColor = '#fff8c4'
+      });
+    } else {
+      columns.push({ title: key, data: key });
+    }
+  });
 
-      if (selectedIndexes.length === 0) {
-        alert("Silakan pilih minimal satu baris untuk diunduh.");
-        return;
-      }
+  const table = $('#sheet-data').DataTable({
+    fixedHeader: { header: true, headerOffset: 60 },
+    fixedColumns: { leftColumns: 1 },
+    data,
+    columns,
+    columnDefs: [{ targets: 0, className: 'dt-center' }],
+    scrollY: 'calc(100vh - 250px)',
+    scrollX: true,
+    scrollCollapse: true,
+    paging: true,
+    pageLength: 10,
+    dom: 'Blfrtip',
+    buttons: []
+  });
 
-      const selectedData = selectedIndexes.map(i => table.row(i).data());
-      const exportColumns = columns.slice(1).map(c => c.title);
+  $('#download-btn').on('click', () => {
+    const selectedIndexes = $('.row-select:checked').map((_, cb) => parseInt(cb.dataset.index)).get();
+    if (selectedIndexes.length === 0) return alert("Silakan pilih minimal satu baris untuk diunduh.");
+    const selectedData = selectedIndexes.map(i => table.row(i).data());
+    const exportColumns = columns.slice(1).map(c => c.title);
+    const csv = [exportColumns.join(",")].concat(
+      selectedData.map(row => exportColumns.map(key => `"${(row[key] || '').replace(/"/g, '""')}"`).join(","))
+    ).join("\n");
+    const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
+    const link = document.createElement("a");
+    link.href = URL.createObjectURL(blob);
+    link.download = "EPTalent_Database_Selected.csv";
+    link.click();
+  });
 
-      const csvContent = [exportColumns.join(",")].concat(
-        selectedData.map(row => exportColumns.map(key => `"${(row[key] || '').replace(/"/g, '""')}"`).join(","))
-      ).join("\n");
+  $('#select-all').on('change', function() {
+    $('.row-select').prop('checked', this.checked);
+  });
 
-      const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
-      const link = document.createElement("a");
-      link.href = URL.createObjectURL(blob);
-      link.download = "EPTalent_Database_Selected.csv";
-      link.click();
-    });
+  setupFilter(data, 'Pendidikan', '#filter-pendidikan', columns, table);
+  setupFilter(data, 'Posisi Terkahir', '#filter-posisi', columns, table);
+  setupFilter(data, 'Level Posisi', '#filter-level', columns, table);
+  setupFilter(data, 'Posisi dilamar', '#filter-dilamar', columns, table);
 
-    $(document).on('change', '#select-all', function() {
-      $('.row-select').prop('checked', this.checked);
-    });
+  $(document).on('change', '.action-dropdown', function() {
+    const rowIndex = $(this).closest('tr').index();
+    actionStatus[rowIndex] = $(this).val();
+    localStorage.setItem('actionStatus', JSON.stringify(actionStatus));
+  });
+}
 
-    setupFilter(data, 'Pendidikan', '#filter-pendidikan', columns, table);
-    setupFilter(data, 'Posisi Terkahir', '#filter-posisi', columns, table);
-    setupFilter(data, 'Level Posisi', '#filter-level', columns, table);
-    setupFilter(data, 'Posisi dilamar', '#filter-dilamar', columns, table);
-  }
+function setupFilter(data, colName, selector, columns, table) {
+  const values = [...new Set(data.map(row => row[colName]).filter(Boolean))].sort();
+  values.forEach(v => $(selector).append(`<option value="${v}">${v}</option>`));
+  $(selector).on('change', function () {
+    const idx = columns.findIndex(c => c.title === colName);
+    table.column(idx).search(this.value).draw();
+  });
+}
 
-  function setupFilter(data, colName, selector, columns, table) {
-    const uniqueValues = [...new Set(data.map(row => row[colName]).filter(Boolean))].sort();
-    uniqueValues.forEach(val => {
-      $(selector).append(`<option value="${val}">${val}</option>`);
-    });
-    $(selector).on('change', function () {
-      table.column(columns.findIndex(c => c.title === colName)).search(this.value).draw();
-    });
-  }
+if (localStorage.getItem("loggedIn") === "true") {
+  document.getElementById("login-screen").style.display = "none";
+  document.getElementById("main-content").style.display = "block";
+  init();
+}
 
-  if (localStorage.getItem("loggedIn") === "true") {
-    document.getElementById("login-screen").style.display = "none";
-    document.getElementById("main-content").style.display = "block";
-    init();
-  }
-
-  function logout() {
-    localStorage.removeItem("loggedIn");
-    location.reload();
-  }
+function logout() {
+  localStorage.removeItem("loggedIn");
+  location.reload();
+}
 </script>
 </body>
 </html>
