--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       background-color: #f9fafb;
       z-index: 1000;
       padding: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
       gap: 10px;
+      justify-content: center;
     }
     select {
       padding: 6px 14px;
@@ -142,12 +142,12 @@
 <div style="text-align: right; margin-bottom: 10px;">
   <button onclick="logout()" style="background-color:#d9534f; color:white; border:none; border-radius:999px; padding:6px 12px; font-size:11px; cursor:pointer;">Logout</button>
 </div>
-<div id="controls">
+<div id="controls" class="desktop-controls">
   <button id="download-btn">Download to Excel</button>
   <select id="filter-pendidikan" title="Filter berdasarkan jenjang pendidikan terakhir kandidat">
     <option value="">Pendidikan</option>
   </select>
-  <select id="filter-timestamp" title="Filter berdasarkan tanggal pengisian data (DD-MM-YYYY)">
+  <select id="filter-timestamp" title="Filter berdasarkan tanggal pengisian data (DD-MM)">
     <option value="">Tanggal</option>
   </select>
   <select id="filter-level" title="Filter berdasarkan tingkatan posisi terakhir kandidat">
@@ -157,6 +157,54 @@
     <option value="">Posisi Dilamar</option>
   </select>
 </div>
+
+<details id="controls-mobile" class="mobile-controls" style="display:none; margin-bottom: 1rem;">
+  <summary style="cursor:pointer; font-weight:bold; font-size:13px; padding:8px 12px; background:#e5e7eb; border-radius:999px; text-align:center; width:max-content; margin:auto;">Tampilkan Filter</summary>
+  <div style="padding: 10px; display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+    <button id="download-btn">Download to Excel</button>
+    <select id="filter-pendidikan">
+      <option value="">Pendidikan</option>
+    </select>
+    <select id="filter-timestamp">
+      <option value="">Tanggal</option>
+    </select>
+    <select id="filter-level">
+      <option value="">Level Posisi</option>
+    </select>
+    <select id="filter-dilamar">
+      <option value="">Posisi Dilamar</option>
+    </select>
+  </div>
+</details>
+
+<style>
+@media (max-width: 768px) {
+  .desktop-controls { display: none !important; }
+  .mobile-controls { display: block !important; }
+  #controls-mobile summary {
+    transition: background-color 0.3s ease;
+  }
+  #controls-mobile[open] summary {
+    background-color: #d1fae5;
+  }
+  #controls-mobile div {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: all 0.3s ease;
+  }
+  #controls-mobile[open] div {
+    max-height: 500px;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@media (min-width: 769px) {
+  .desktop-controls { display: flex !important; transition: all 0.3s ease; }
+  .mobile-controls { display: none !important; }
+}
+</style>
 
 <div style="overflow-x:auto;">
   <table id="sheet-data" class="display nowrap" style="width:100%">
