--- a/index.html
+++ b/index.html
@@ -54,37 +54,73 @@
       font-size: 20px;
       color: #333;
     }
-    #controls {
-      position: sticky;
-      top: 50px;
-      background-color: #f9fafb;
-      z-index: 1000;
-      padding: 10px;
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+
+    .filter-container summary {
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 13px;
+      padding: 8px 12px;
+      background: #e5e7eb;
+      border-radius: 999px;
+      text-align: center;
+      width: max-content;
+      margin: 1rem auto;
+      transition: background-color 0.3s ease;
+    }
+
+    .filter-container[open] summary {
+      background-color: #d1fae5;
+    }
+
+    .filter-controls {
+      display: flex;
+      flex-wrap: wrap;
       gap: 10px;
       justify-content: center;
+      padding: 10px;
     }
-    select {
+
+    .filter-controls select,
+    .filter-controls button {
       padding: 6px 14px;
       border-radius: 999px;
       border: 1px solid #ccc;
       font-size: 12px;
-      width: 150px;
       background-color: white;
       box-shadow: 0 1px 2px rgba(0,0,0,0.1);
       cursor: pointer;
     }
-    #download-btn {
+
+    .filter-controls button {
       background-color: #217346;
       color: white;
-      border-radius: 999px;
-      padding: 6px 16px;
-      font-size: 12px;
       border: none;
-      cursor: pointer;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
     }
+
+    @media (min-width: 769px) {
+      .filter-container summary {
+        display: none;
+      }
+      .filter-controls {
+        display: flex !important;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .filter-controls {
+        max-height: 0;
+        opacity: 0;
+        overflow: hidden;
+        transform: translateY(-10px);
+        transition: all 0.3s ease;
+      }
+      .filter-container[open] .filter-controls {
+        max-height: 1000px;
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     table {
       font-size: 11px;
       border-radius: 8px;
@@ -142,69 +178,17 @@
 <div style="text-align: right; margin-bottom: 10px;">
   <button onclick="logout()" style="background-color:#d9534f; color:white; border:none; border-radius:999px; padding:6px 12px; font-size:11px; cursor:pointer;">Logout</button>
 </div>
-<div id="controls" class="desktop-controls">
-  <button id="download-btn">Download to Excel</button>
-  <select id="filter-pendidikan" title="Filter berdasarkan jenjang pendidikan terakhir kandidat">
-    <option value="">Pendidikan</option>
-  </select>
-  <select id="filter-timestamp" title="Filter berdasarkan tanggal pengisian data (DD-MM)">
-    <option value="">Tanggal</option>
-  </select>
-  <select id="filter-level" title="Filter berdasarkan tingkatan posisi terakhir kandidat">
-    <option value="">Level Posisi</option>
-  </select>
-  <select id="filter-dilamar" title="Filter berdasarkan posisi yang sedang dilamar kandidat">
-    <option value="">Posisi Dilamar</option>
-  </select>
-</div>
 
-<details id="controls-mobile" class="mobile-controls" style="display:none; margin-bottom: 1rem;">
-  <summary style="cursor:pointer; font-weight:bold; font-size:13px; padding:8px 12px; background:#e5e7eb; border-radius:999px; text-align:center; width:max-content; margin:auto;">Tampilkan Filter</summary>
-  <div style="padding: 10px; display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+<details id="responsive-filters" class="filter-container" open>
+  <summary>Filter Kandidat</summary>
+  <div class="filter-controls">
     <button id="download-btn">Download to Excel</button>
-    <select id="filter-pendidikan">
-      <option value="">Pendidikan</option>
-    </select>
-    <select id="filter-timestamp">
-      <option value="">Tanggal</option>
-    </select>
-    <select id="filter-level">
-      <option value="">Level Posisi</option>
-    </select>
-    <select id="filter-dilamar">
-      <option value="">Posisi Dilamar</option>
-    </select>
+    <select id="filter-pendidikan"><option value="">Pendidikan</option></select>
+    <select id="filter-timestamp"><option value="">Tanggal</option></select>
+    <select id="filter-level"><option value="">Level Posisi</option></select>
+    <select id="filter-dilamar"><option value="">Posisi Dilamar</option></select>
   </div>
 </details>
-
-<style>
-@media (max-width: 768px) {
-  .desktop-controls { display: none !important; }
-  .mobile-controls { display: block !important; }
-  #controls-mobile summary {
-    transition: background-color 0.3s ease;
-  }
-  #controls-mobile[open] summary {
-    background-color: #d1fae5;
-  }
-  #controls-mobile div {
-    max-height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transform: translateY(-10px);
-    transition: all 0.3s ease;
-  }
-  #controls-mobile[open] div {
-    max-height: 500px;
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-@media (min-width: 769px) {
-  .desktop-controls { display: flex !important; transition: all 0.3s ease; }
-  .mobile-controls { display: none !important; }
-}
-</style>
 
 <div style="overflow-x:auto;">
   <table id="sheet-data" class="display nowrap" style="width:100%">
@@ -243,15 +227,15 @@ function login() {
   }
 }
 
+function logout() {
+  localStorage.removeItem("loggedIn");
+  location.reload();
+}
+
 if (localStorage.getItem("loggedIn") === "true") {
   document.getElementById("login-screen").style.display = "none";
   document.getElementById("main-content").style.display = "block";
   init();
-}
-
-function logout() {
-  localStorage.removeItem("loggedIn");
-  location.reload();
 }
 
 function init() {
@@ -279,32 +263,29 @@ function renderTable(data) {
   Object.keys(data[0]).forEach(key => {
     if (key !== 'Action' && key !== '__savedAction' && key !== 'Riwayat Proses') {
       columns.push(
-      key === 'Alamat Saat ini'
-        ? {
-            title: key,
-            data: key,
-            render: (data) => `<span class="truncate" title="${data}">${data}</span>`
+        key === 'Alamat Saat ini' ? {
+          title: key,
+          data: key,
+          render: (data) => `<span class="truncate" title="${data}">${data}</span>`
+        } : key === 'Timestamp' ? {
+          title: key,
+          data: key,
+          render: (data) => {
+            const date = new Date(data);
+            const day = String(date.getDate()).padStart(2, '0');
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const year = date.getFullYear();
+            return `${day}-${month}-${year}`;
           }
-        : key === 'Timestamp'
-        ? {
-            title: key,
-            data: key,
-            render: (data) => {
-              const date = new Date(data);
-              const day = String(date.getDate()).padStart(2, '0');
-              const month = String(date.getMonth() + 1).padStart(2, '0');
-              const year = date.getFullYear();
-              return `${day}-${month}-${year}`;
-            }
-          }
-        : key === 'Upload CV'
-        ? {
-            title: key,
-            data: key,
-            render: (data) => data ? `<a href="${data}" target="_blank">Lihat CV</a>` : ''
-          }
-        : { title: key, data: key }
-    );
+        } : key === 'Upload CV' ? {
+          title: key,
+          data: key,
+          render: (data) => data ? `<a href="${data}" target="_blank">Lihat CV</a>` : ''
+        } : {
+          title: key,
+          data: key
+        }
+      );
     }
   });
 
