--- a/index.html
+++ b/index.html
@@ -271,12 +271,13 @@ function renderTable(data) {
           title: key,
           data: key,
           render: (data) => {
-            const date = new Date(data);
-            const day = String(date.getDate()).padStart(2, '0');
-            const month = String(date.getMonth() + 1).padStart(2, '0');
-            const year = date.getFullYear();
-            return `${day}-${month}-${year}`;
-          }
+              const date = new Date(data);
+              if (isNaN(date.getTime())) return "-";
+              const day = String(date.getDate()).padStart(2, '0');
+              const month = String(date.getMonth() + 1).padStart(2, '0');
+              const year = date.getFullYear();
+              return `${day}-${month}-${year}`;
+            }
         } : key === 'Upload CV' ? {
           title: key,
           data: key,
