--- a/index.html
+++ b/index.html
@@ -271,13 +271,16 @@ function renderTable(data) {
           title: key,
           data: key,
           render: (data) => {
-              const date = new Date(data);
-              if (isNaN(date.getTime())) return "-";
-              const day = String(date.getDate()).padStart(2, '0');
-              const month = String(date.getMonth() + 1).padStart(2, '0');
-              const year = date.getFullYear();
-              return `${day}-${month}-${year}`;
-            }
+            if (!data || typeof data !== "string") return "-";
+            const [datePart, timePart] = data.split(" ");
+            if (!datePart) return "-";
+        
+            const [day, month, year] = datePart.split("/");
+            if (!day || !month || !year) return "-";
+        
+            // Optional tampilkan jam juga
+            return `${day}-${month}-${year}`; // atau `${day}-${month}-${year} ${timePart}`
+          }
         } : key === 'Upload CV' ? {
           title: key,
           data: key,
